<resources>
    <string name="app_name">Your News</string>

    <!-- main_activity default/empty states -->
    <string name="no_news_found">No News Found</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <!-- news_story_activity empty states -->
    <string name="no_title_found">Title N/A</string>
    <string name="no_column_section_found">Column N/A</string>
    <string name="no_time_found"> </string>
    <string name="no_date_found">Date N/A</string>
    <string name="no_author_found">Author N/A</string>

    <!-- news_story_activity default placeholder text -->
    <string name="title_default_text">Florida Man Goes On a Rampage - Steals All The Chicken</string>
    <string name="column_section_default_text">Culture</string>
    <string name="time_default_text">1:18 PM</string>
    <string name="date_default_text">Nov 23, 1987</string>
    <string name="author_default_text">John Karl Dusenbery</string>

    <!-- date formatting -->
    <string name="received_date_and_time_format">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="displayed_date_format">LLL dd, yyy</string>
    <string name="displayed_time_format">h:mm a</string>

    <!-- API commands -->
    <string name="method_GET">GET</string>

    <!-- Character encoding format -->
    <string name="utf_8">UTF-8</string>

    <string name="response_object">response</string>
    <string name="results_array">results</string>
    <string name="title">webTitle</string>
    <string name="section_name">sectionName</string>
    <string name="web_publication_date_and_time">webPublicationDate</string>
    <string name="web_url">webUrl</string>
    <string name="fields_object">fields</string>
    <string name="thumbnail">thumbnail</string>
    <string name="tags_array">tags</string>
    <string name="web_title_in_tags_array">webTitle</string>

    <string name="http_request_error_message">Problem making the HTTP request</string>
    <string name="problem_building_url">Problem building the URL</string>
    <string name="problem_retrieving_json_result">Problem retrieving the news JSON results.</string>
    <string name="error_response_code_message">Error response code:</string>
    <string name="problem_parsing_news_json_result">Problem parsing the news JSON results</string>
    <string name="problem_passing_date_and_time">Problem in parsing Date or Time</string>
    <string name="null_date_and_time">currentDateAndTime is null</string>

</resources>
